--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-vant": "^3.3.3"
+    "react-vant": "^3.3.3",
+    "telegram-webapps-types": "^1.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -23,6 +24,7 @@
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
+    "telegram-webapps": "^7.0.0",
     "typescript": "^5"
   }
 }
