--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vkruglikov/react-telegram-web-app": "^2.1.9",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
