--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.1",
     "@vkruglikov/react-telegram-web-app": "^2.1.9",
+    "antd": "^5.15.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
